--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="box">
         <div id="power">
             <div class="power-switch">
-                <input type="checkbox" />
+                <input type="checkbox" id="checkbox123" data="off" />
                 <div class="button">
                     <svg class="power-off">
                     <use xlink:href="#line" class="line" />
@@ -76,10 +76,8 @@
                 </symbol>
               </svg>
         </div>
-        <div class="container">
-            <div class="box">
-                <h1>Are you treating me as a light switch?<br>Cuz you turn me on everytime you enter the room.</h1>
-            </div>
+        <div class="box">
+            <h1>Are you treating me as a light switch?<br>Because you turn me on everytime you enter the room.</h1>
         </div>
     </section>
 
