--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>FOR MY BAE</title>
     <link rel="icon" href="./assets/Image/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="./assets/Style/Style.css">
 </head>
 
@@ -125,6 +127,7 @@
 
 
     <script src="./assets/Script/Script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
