--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-
+    <audio loop autoplay>
+        <source src="./assets/Music/phithuyen.mp3" type="audio/filetype">
+    </audio>
     <section id="love_heart">
         <div class="alllove">
             <span class="love love1 glyphicon glyphicon-heart"></span>
