--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--
     <section id="love_heart">
         <div class="alllove">
             <span class="love love1 glyphicon glyphicon-heart"></span>
@@ -66,8 +67,6 @@
                   </svg>
                 </div>
             </div>
-
-            <!-- SVG -->
             <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                 <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 150" id="line">
                   <line x1="75" y1="34" x2="75" y2="58"/>
@@ -81,6 +80,25 @@
             <h1>Are you treating me as a light switch?<br>Because you turn me on everytime you enter the room.</h1>
         </div>
     </section>
+    -->
+
+
+<div class="balloon3"></div>
+
+<div class="balloon4"></div>
+
+</div><!-- end balloons -->
+
+</div><!-- end cardfront -->
+
+<div class="cardinside">
+<h3 class="back">HAPPY BIRTHDAY!</h3>
+<p>Dear Hà Anh Xink,</p>
+<p>Chúc mừng sinh nhật em Boo!</p>
+<p class="name">DuckMink</p>
+</div><!-- end cardinside -->
+
+</div><!-- end birthdaycard -->
 
     <script src="./assets/Script/Script.js"></script>
     <script src="./assets/assets/js/scrollfade-0.1.js"></script>
