--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
     </section>
     -->
 
+<div class="birthdaycard">
+
+<div class="cardfront">
+<h3 class="happy">Happy Birthday!</h3>
+
+<div class="balloons">
+
+<div class="balloon1"></div>
+
+<div class="balloon2"></div>
 
 <div class="balloon3"></div>
 
