--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FOR MY BAE</title>
+    <title>HPBD</title>
     <link rel="icon" href="./assets/Image/logo.png">
     <link rel="stylesheet" href="./assets/Style/Style.css">
 </head>
@@ -33,8 +33,8 @@
 
 <div class="cardinside">
 <h3 class="back">HAPPY BIRTHDAY!</h3>
-<p>Dear Hà Anh Xink,</p>
-<p>Chúc mừng sinh nhật em Boo!</p>
+<p>Dear Qanh Xink,</p>
+<p>Chúc mừng sinh nhật nhaaaa!</p>
 <p class="name">DuckMink</p>
 </div><!-- end cardinside -->
 
